--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,21 @@ Temporary Items
 .vscode
 
 # End of https://www.toptal.com/developers/gitignore/api/osx
+
+
+# Файлы и папки операционной системы
+.DS_Store
+Thumbs.db
+
+# Файлы редактора
+.idea
+*.sublime*
+.vscode
+
+# Вспомогательные файлы
+*.log*
+node_modules/
+reports/
+
+# Папка с собранными файлами проекта
+# build/
